--- a/templates/index.html
+++ b/templates/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="{{ url_for ('static', filename='lib/css/bootstrap.min.css')}}">
     <link rel="stylesheet" href="{{ url_for ('static', filename='lib/css/keen-dashboards.css')}}">
     <link rel="stylesheet" href="{{ url_for ('static', filename='lib/css/dc.css')}}">
+    <link rel="stylesheet" href="{{url_for ('static', filename='lib/css/introjs.css')}}" />
 
 </head>
 <body class="application" id="bod">
@@ -19,6 +20,9 @@
        <div>
            <ul class="nav navbar-nav">
                <li><a href="/campaign">The Campaign</a></li>
+               <li><button class="intro_button" type="button" autofocus onclick="javascript:introJs().start();">
+                   Start Tour!
+               </button></li>
            </ul>
        </div>
    </div>
@@ -41,7 +45,7 @@
                         <div class="chart-title">
                             Donation City
                         </div>
-                        <div class="chart-stage">
+                        <div class="chart-stage" data-step="1" data-intro="The description that you want" style="font-weight: normal" data-position="bottom">
                             <div id="menu-select"></div>
                         </div>
                     </div>
@@ -54,7 +58,7 @@
                        <div class="chart-title title-background">
                            Total Donations in USD
                        </div>
-                       <div class="chart-stage metric-background">
+                       <div class="chart-stage metric-background" data-step="2" data-intro="The description that you want" style="font-weight: normal" data-position="bottom">
                            <div id="total-donations-nd"></div>
                        </div>
                    </div>
@@ -66,7 +70,7 @@
                        <div class="chart-title title-background">
                            Total Number of Donations
                        </div>
-                       <div class="chart-stage metric-background">
+                       <div class="chart-stage metric-background" data-step="3" data-intro="The description that you want" style="font-weight: normal" data-position="bottom">
                            <div id="number-projects-nd"></div>
                        </div>
                    </div>
@@ -83,7 +87,7 @@
                        <div class="chart-title title-background">
                            Resources Type
                        </div>
-                       <div class="chart-stage chart-background">
+                       <div class="chart-stage chart-background" data-step="4" data-intro="The description that you want" style="font-weight: normal" data-position="bottom">
                            <div id="resource-type-row-chart"></div>
                        </div>
                    </div>
@@ -96,7 +100,7 @@
                        <div class="chart-title title-background">
                            Funding Status
                        </div>
-                       <div class="chart-stage chart-background">
+                       <div class="chart-stage chart-background" data-step="5" data-intro="The description that you want" style="font-weight: normal" data-position="bottom">
                            <div id="funding-chart"></div>
                        </div>
                    </div>
@@ -109,7 +113,7 @@
                        <div class="chart-title title-background">
                            Area
                        </div>
-                       <div class="chart-stage chart-background">
+                       <div class="chart-stage chart-background" data-step="6" data-intro="The description that you want" style="font-weight: normal" data-position="bottom">
                            <div id="metro-chart"></div>
                        </div>
                    </div>
@@ -122,7 +126,7 @@
                        <div class="chart-title title-background">
                            Grade Range
                        </div>
-                       <div class="chart-stage chart-background">
+                       <div class="chart-stage chart-background"  data-step="7" data-intro="The description that you want" style="font-weight: normal" data-position="bottom">
                            <div id="grade-level-chart"></div>
                        </div>
                    </div>
@@ -135,7 +139,7 @@
                        <div class="chart-title title-background">
                            Primary Focus Subject
                        </div>
-                       <div class="chart-stage chart-background">
+                       <div class="chart-stage chart-background" data-step="8" data-intro="The description that you want" style="font-weight: normal" data-position="bottom">
                            <div id="pri-focus-chart"></div>
                        </div>
                    </div>
@@ -153,7 +157,7 @@
                        <div class="chart-title title-background">
                            Number of Donations
                        </div>
-                       <div class="chart-stage chart-background">
+                       <div class="chart-stage chart-background" data-step="9" data-intro="The description that you want" style="font-weight: normal" data-position="right">
                            <div id="time-chart"></div>
                        </div>
                    </div>
@@ -163,7 +167,7 @@
                 <!-- Poverty -->
                 <div class="col-sm-6">
                    <div class="chart-wrapper">
-                       <div class="chart-title title-background">
+                       <div class="chart-title title-background" data-step="10" data-intro="The description that you want" style="font-weight: normal" data-position="left">
                            Poverty Level
                        </div>
                        <div class="chart-stage chart-background">
@@ -182,6 +186,7 @@
 {% endblock %}
 
 
+
 <script src="{{ url_for ('static', filename='lib/js/jquery.min.js')}}"></script>
 <script src="{{ url_for ('static', filename='lib/js/bootstrap.min.js')}}"></script>
 <script src="{{ url_for ('static', filename='lib/js/crossfilter.js')}}"></script>
@@ -191,6 +196,7 @@
 
 <script src="{{ url_for ('static', filename='lib/js/keen.min.js')}}"></script>
 <script src="{{ url_for ('static', filename='js/graph.js')}}"></script>
+<script src="{{url_for ('static', filename='lib/js/intro.js')}}" type="text/javascript"></script>
 
 </body>
 </html>
