add function to make charts responsive to resizing window.

--- a/templates/index.html
+++ b/templates/index.html
@@ -139,7 +139,7 @@
                        <div class="chart-title title-background">
                            Primary Focus Subject
                        </div>
-                       <div class="chart-stage chart-background" data-step="8" data-intro="The description that you want" style="font-weight: normal" data-position="bottom">
+                       <div id="size-pie" class="chart-stage chart-background" data-step="8" data-intro="The description that you want" style="font-weight: normal" data-position="bottom">
                            <div id="pri-focus-chart"></div>
                        </div>
                    </div>
