complete function that resize charts when window size is altered.

--- a/templates/index.html
+++ b/templates/index.html
@@ -87,7 +87,7 @@
                        <div class="chart-title title-background">
                            Resources Type
                        </div>
-                       <div class="chart-stage chart-background" data-step="4" data-intro="The description that you want" style="font-weight: normal" data-position="bottom">
+                       <div id="size-bar-sm" class="chart-stage chart-background" data-step="4" data-intro="The description that you want" style="font-weight: normal" data-position="bottom">
                            <div id="resource-type-row-chart"></div>
                        </div>
                    </div>
@@ -157,7 +157,7 @@
                        <div class="chart-title title-background">
                            Number of Donations
                        </div>
-                       <div class="chart-stage chart-background" data-step="9" data-intro="The description that you want" style="font-weight: normal" data-position="right">
+                       <div id="size-bar-big" class="chart-stage chart-background" data-step="9" data-intro="The description that you want" style="font-weight: normal" data-position="right">
                            <div id="time-chart"></div>
                        </div>
                    </div>
