start messages for east chart

--- a/templates/index.html
+++ b/templates/index.html
@@ -84,7 +84,7 @@
                <!-- Resources -->
                <div class="col-sm-4">
                    <div class="chart-wrapper">
-                       <div class="chart-title title-background">
+                       <div class="chart-title title-background message-resource">
                            Resources Type
                        </div>
                        <div id="size-bar-sm" class="chart-stage chart-background" data-step="4" data-intro="The description that you want" style="font-weight: normal" data-position="bottom">
@@ -92,12 +92,13 @@
                        </div>
                    </div>
                </div>
+
                <!-- Resources -->
 
                <!-- Funding Pie -->
                <div class="col-sm-2">
                    <div class="chart-wrapper">
-                       <div class="chart-title title-background">
+                       <div class="chart-title title-background message-resource">
                            Funding Status
                        </div>
                        <div class="chart-stage chart-background" data-step="5" data-intro="The description that you want" style="font-weight: normal" data-position="bottom">
@@ -105,6 +106,10 @@
                        </div>
                    </div>
                </div>
+               <div class="messagepop pop">
+                   <p>This is a message about resources</p>
+               </div>
+
                <!-- Funding Pie -->
 
                <!-- Metro Pie -->
