add message to each chart start filtering dimensions for story

--- a/templates/index.html
+++ b/templates/index.html
@@ -84,7 +84,7 @@
                <!-- Resources -->
                <div class="col-sm-4">
                    <div class="chart-wrapper">
-                       <div class="chart-title title-background message-resource">
+                       <div class="chart-title title-background story-message" id="resource">
                            Resources Type
                        </div>
                        <div id="size-bar-sm" class="chart-stage chart-background" data-step="4" data-intro="The description that you want" style="font-weight: normal" data-position="bottom">
@@ -92,13 +92,16 @@
                        </div>
                    </div>
                </div>
+               <div class="messagepop pop pop1">
+                   <p>This is a message about resources</p>
+               </div>
 
                <!-- Resources -->
 
                <!-- Funding Pie -->
                <div class="col-sm-2">
                    <div class="chart-wrapper">
-                       <div class="chart-title title-background message-resource">
+                       <div class="chart-title title-background story-message" id="funding">
                            Funding Status
                        </div>
                        <div class="chart-stage chart-background" data-step="5" data-intro="The description that you want" style="font-weight: normal" data-position="bottom">
@@ -106,8 +109,8 @@
                        </div>
                    </div>
                </div>
-               <div class="messagepop pop">
-                   <p>This is a message about resources</p>
+               <div class="messagepop pop pop2">
+                   <p>This is a message about funding</p>
                </div>
 
                <!-- Funding Pie -->
@@ -115,7 +118,7 @@
                <!-- Metro Pie -->
                <div class="col-sm-2">
                    <div class="chart-wrapper">
-                       <div class="chart-title title-background">
+                       <div class="chart-title title-background story-message" id="area">
                            Area
                        </div>
                        <div class="chart-stage chart-background" data-step="6" data-intro="The description that you want" style="font-weight: normal" data-position="bottom">
@@ -123,12 +126,15 @@
                        </div>
                    </div>
                </div>
+                <div class="messagepop pop pop3">
+                   <p>This is a message about the area</p>
+               </div>
                <!-- Metro Pie -->
 
                <!-- Grade Pie -->
                <div class="col-sm-2">
                    <div class="chart-wrapper">
-                       <div class="chart-title title-background">
+                       <div class="chart-title title-background story-message" id="grade">
                            Grade Range
                        </div>
                        <div class="chart-stage chart-background"  data-step="7" data-intro="The description that you want" style="font-weight: normal" data-position="bottom">
@@ -136,12 +142,15 @@
                        </div>
                    </div>
                </div>
+                <div class="messagepop pop pop4">
+                   <p>This is a message about grades</p>
+               </div>
                <!-- Grade Pie -->
 
                 <!-- Primary Focus Subject -->
                 <div class="col-sm-2">
                    <div class="chart-wrapper">
-                       <div class="chart-title title-background">
+                       <div class="chart-title title-background story-message" id="subject">
                            Primary Focus Subject
                        </div>
                        <div id="size-pie" class="chart-stage chart-background" data-step="8" data-intro="The description that you want" style="font-weight: normal" data-position="bottom">
@@ -149,6 +158,9 @@
                        </div>
                    </div>
                 </div>
+                <div class="messagepop pop pop5">
+                   <p>This is a message about subjects</p>
+               </div>
                 <!-- Primary Focus Subject -->
            </div>
            <!-- row 2 close-->
@@ -159,27 +171,33 @@
                 <!-- Time Chart -->
                <div class="col-sm-6">
                    <div class="chart-wrapper">
-                       <div class="chart-title title-background">
-                           Number of Donations
+                       <div class="chart-title title-background story-message" id="year">
+                           Number of Donations per Year
                        </div>
                        <div id="size-bar-big" class="chart-stage chart-background" data-step="9" data-intro="The description that you want" style="font-weight: normal" data-position="right">
                            <div id="time-chart"></div>
                        </div>
                    </div>
                </div>
+                <div class="messagepop pop pop6">
+                   <p>This is a message about the year</p>
+               </div>
                <!-- Time Chart -->
 
                 <!-- Poverty -->
                 <div class="col-sm-6">
                    <div class="chart-wrapper">
-                       <div class="chart-title title-background" data-step="10" data-intro="The description that you want" style="font-weight: normal" data-position="left">
+                       <div class="chart-title title-background story-message" id="poverty">
                            Poverty Level
                        </div>
-                       <div class="chart-stage chart-background">
+                       <div class="chart-stage chart-background" data-step="10" data-intro="The description that you want" style="font-weight: normal" data-position="left">
                            <div id="poverty-level-row-chart"></div>
                        </div>
                    </div>
                 </div>
+                <div class="messagepop pop pop7">
+                   <p>This is a message about poverty</p>
+               </div>
                 <!-- Poverty -->
 
            </div>
