--- a/templates/index.html
+++ b/templates/index.html
@@ -94,6 +94,7 @@
                </div>
                <div class="messagepop pop pop1">
                    <p>This is a message about resources</p>
+                   <a class="close-message">Close</a>
                </div>
 
                <!-- Resources -->
@@ -111,6 +112,7 @@
                </div>
                <div class="messagepop pop pop2">
                    <p>This is a message about funding</p>
+                   <a class="close-message">Close</a>
                </div>
 
                <!-- Funding Pie -->
@@ -128,6 +130,7 @@
                </div>
                 <div class="messagepop pop pop3">
                    <p>This is a message about the area</p>
+                    <a class="close-message">Close</a>
                </div>
                <!-- Metro Pie -->
 
@@ -144,6 +147,7 @@
                </div>
                 <div class="messagepop pop pop4">
                    <p>This is a message about grades</p>
+                    <a class="close-message">Close</a>
                </div>
                <!-- Grade Pie -->
 
@@ -159,8 +163,9 @@
                    </div>
                 </div>
                 <div class="messagepop pop pop5">
-                   <p>This is a message about subjects</p>
-               </div>
+                    <p>This is a message about subjects</p>
+                    <a class="close-message">Close</a>
+                </div>
                 <!-- Primary Focus Subject -->
            </div>
            <!-- row 2 close-->
@@ -180,8 +185,9 @@
                    </div>
                </div>
                 <div class="messagepop pop pop6">
-                   <p>This is a message about the year</p>
-               </div>
+                    <p>This is a message about the year</p>
+                    <a class="close-message">Close</a>
+                </div>
                <!-- Time Chart -->
 
                 <!-- Poverty -->
@@ -196,8 +202,9 @@
                    </div>
                 </div>
                 <div class="messagepop pop pop7">
-                   <p>This is a message about poverty</p>
-               </div>
+                    <p>This is a message about poverty</p>
+                    <a class="close-message">Close</a>
+                </div>
                 <!-- Poverty -->
 
            </div>
