--- a/templates/index.html
+++ b/templates/index.html
@@ -88,12 +88,17 @@
                            Resources Type
                        </div>
                        <div id="size-bar-sm" class="chart-stage chart-background" data-step="4" data-intro="The description that you want" style="font-weight: normal" data-position="bottom">
-                           <div id="resource-type-row-chart"></div>
+                           <div class="all-charts" id="resource-type-row-chart"></div>
+                           <div class="message-title" id="supplies">
+                               <h2>Supplies</h2>
+                           </div>
                        </div>
                    </div>
                </div>
-
-
+                <div class="messagepop pop pop1">
+                    <p>This is a message about resources</p>
+                    <a class="close-message">Close</a>
+                </div>
                <!-- Resources -->
 
                <!-- Funding Pie -->
@@ -103,12 +108,17 @@
                            Funding Status
                        </div>
                        <div class="chart-stage chart-background" data-step="5" data-intro="The description that you want" style="font-weight: normal" data-position="bottom">
-                           <div id="funding-chart"></div>
+                           <div class="all-charts" id="funding-chart"></div>
+                           <div class="message-title" id="expired">
+                               <h2>Expired</h2>
+                           </div>
                        </div>
                    </div>
                </div>
-
-
+                <div class="messagepop pop pop2">
+                    <p>This is a message about funding</p>
+                    <a class="close-message">Close</a>
+                </div>
                <!-- Funding Pie -->
 
                <!-- Metro Pie -->
@@ -118,11 +128,17 @@
                            Area
                        </div>
                        <div class="chart-stage chart-background" data-step="6" data-intro="The description that you want" style="font-weight: normal" data-position="bottom">
-                           <div id="metro-chart"></div>
+                           <div class="all-charts" id="metro-chart"></div>
+                           <div class="message-title" id="rural">
+                               <h2>Rural</h2>
+                           </div>
                        </div>
                    </div>
                </div>
-
+                <div class="messagepop pop pop3">
+                    <p>This is a message about the area</p>
+                    <a class="close-message">Close</a>
+                </div>
                <!-- Metro Pie -->
 
                <!-- Grade Pie -->
@@ -132,11 +148,17 @@
                            Grade Range
                        </div>
                        <div class="chart-stage chart-background"  data-step="7" data-intro="The description that you want" style="font-weight: normal" data-position="bottom">
-                           <div id="grade-level-chart"></div>
+                           <div class="all-charts" id="grade-level-chart"></div>
+                           <div class="message-title" id="grade-6-8">
+                               <h2>Grades 6-8</h2>
+                           </div>
                        </div>
                    </div>
                </div>
-
+                <div class="messagepop pop pop4">
+                    <p>This is a message about grades</p>
+                    <a class="close-message">Close</a>
+                </div>
                <!-- Grade Pie -->
 
                 <!-- Primary Focus Subject -->
@@ -146,11 +168,17 @@
                            Primary Focus Subject
                        </div>
                        <div id="size-pie" class="chart-stage chart-background" data-step="8" data-intro="The description that you want" style="font-weight: normal" data-position="bottom">
-                           <div id="pri-focus-chart"></div>
+                           <div class="all-charts" id="pri-focus-chart"></div>
+                            <div class="message-title" id="literacy">
+                               <h2>Literacy</h2>
+                           </div>
                        </div>
                    </div>
                 </div>
-
+                <div class="messagepop pop pop5">
+                    <p>This is a message about subjects</p>
+                    <a class="close-message">Close</a>
+                </div>
                 <!-- Primary Focus Subject -->
            </div>
            <!-- row 2 close-->
@@ -165,11 +193,14 @@
                            Number of Donations per Year
                        </div>
                        <div id="size-bar-big" class="chart-stage chart-background" data-step="9" data-intro="The description that you want" style="font-weight: normal" data-position="right">
-                           <div id="time-chart"></div>
+                           <div class="all-charts" id="time-chart"></div>
                        </div>
                    </div>
                </div>
-
+                <div class="messagepop pop pop6">
+                    <p>This is a message about the year</p>
+                    <a class="close-message">Close</a>
+                </div>
                <!-- Time Chart -->
 
                 <!-- Poverty -->
@@ -179,11 +210,14 @@
                            Poverty Level
                        </div>
                        <div class="chart-stage chart-background" data-step="10" data-intro="The description that you want" style="font-weight: normal" data-position="left">
-                           <div id="poverty-level-row-chart"></div>
+                           <div class="all-charts" id="poverty-level-row-chart"></div>
                        </div>
                    </div>
                 </div>
-
+                <div class="messagepop pop pop7">
+                    <p>This is a message about poverty</p>
+                    <a class="close-message">Close</a>
+                </div>
                 <!-- Poverty -->
 
            </div>
@@ -192,34 +226,7 @@
            </div>
    </div>
 </div>
-<div class="messagepop pop pop1">
-    <p>This is a message about resources</p>
-    <a class="close-message">Close</a>
-</div>
-<div class="messagepop pop pop2">
-    <p>This is a message about funding</p>
-    <a class="close-message">Close</a>
-</div>
-<div class="messagepop pop pop3">
-    <p>This is a message about the area</p>
-    <a class="close-message">Close</a>
-</div>
-<div class="messagepop pop pop4">
-    <p>This is a message about grades</p>
-    <a class="close-message">Close</a>
-</div>
-<div class="messagepop pop pop5">
-    <p>This is a message about subjects</p>
-    <a class="close-message">Close</a>
-</div>
-<div class="messagepop pop pop6">
-    <p>This is a message about the year</p>
-    <a class="close-message">Close</a>
-</div>
-<div class="messagepop pop pop7">
-    <p>This is a message about poverty</p>
-    <a class="close-message">Close</a>
-</div>
+
 {% endblock %}
 
 
